[metadata]
name = pystubs
version = 2018.05.0
description = Dummy values for equality testing
long_description = file:README.md
long_description_content_type = text/markdown
license = Public Domain
author = Andrea Corbellini
author_email = corbellini.andrea@gmail.com
url = https://github.com/andreacorbellini/pystubs
